--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
   "name": "sudointern",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.1.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "axios": "^1.13.6",
     "expo": "~55.0.4",
+    "expo-auth-session": "^55.0.6",
+    "expo-constants": "^55.0.7",
+    "expo-crypto": "^55.0.8",
+    "expo-linking": "^55.0.7",
+    "expo-router": "^55.0.3",
+    "expo-secure-store": "^55.0.8",
     "expo-status-bar": "~55.0.4",
+    "expo-web-browser": "^55.0.9",
+    "firebase": "^12.10.0",
     "react": "19.2.0",
-    "react-native": "0.83.2"
+    "react-dom": "19.2.0",
+    "react-native": "0.83.2",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-reanimated": "4.2.1",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "~4.23.0",
+    "react-native-web": "^0.21.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
+    "babel-preset-expo": "^55.0.10",
     "typescript": "~5.9.2"
   },
   "private": true
