--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-auth-session": "^55.0.6",
     "expo-constants": "^55.0.7",
     "expo-crypto": "^55.0.8",
+    "expo-document-picker": "~55.0.8",
+    "expo-file-system": "~55.0.10",
     "expo-linking": "^55.0.7",
     "expo-router": "^55.0.3",
     "expo-secure-store": "^55.0.8",
